--- a/TechnicalSafetyApplication/Views/Shared/_BasicLayout.cshtml
+++ b/TechnicalSafetyApplication/Views/Shared/_BasicLayout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title</title>
     <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
+<body class="m-1 p-1">
 
     <div>
         @RenderBody()
