--- a/TechnicalSafetyApplication/Views/_ViewImports.cshtml
+++ b/TechnicalSafetyApplication/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using TechnicalSafetyApplication.Models
 @using TechnicalSafetyApplication.Models.Repository
+@using TechnicalSafetyApplication.Models.ViewModels
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
