--- a/TechnicalSafetyApplication/Views/_ViewImports.cshtml
+++ b/TechnicalSafetyApplication/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using TechnicalSafetyApplication.Models
 @using TechnicalSafetyApplication.Models.Repository
 @using TechnicalSafetyApplication.Models.ViewModels
-
+@using Microsoft.AspNetCore.Identity
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper TechnicalSafetyApplication.TagHelpers.*, Users
