Fixed TagHelper' Import

--- a/TechnicalSafetyApplication/Views/_ViewImports.cshtml
+++ b/TechnicalSafetyApplication/Views/_ViewImports.cshtml
@@ -4,4 +4,4 @@
 @using Microsoft.AspNetCore.Identity
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper TechnicalSafetyApplication.TagHelpers.*, Users
+@addTagHelper *, TechnicalSafetyApplication
