--- a/TechnicalSafetyApplication/Views/Account/Login.cshtml
+++ b/TechnicalSafetyApplication/Views/Account/Login.cshtml
@@ -1,18 +1,34 @@
 ﻿@model LoginViewModel
 
-<div class="bg-primary m-1 p-1 text-white"><h4>Log In</h4></div>
-
 <div class="text-danger" asp-validation-summary="All"></div>
 
-<form asp-action="Login" method="post">
-    <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl" />
+<div class="row">
+    <div class="col-md-4">
+        <section>
+
+            <form asp-action="Login" method="post">
+                <h4>Log In</h4>
+                <hr />
+
+                <input type="hidden" name="returnUrl" value="@ViewBag.ReturnUrl" />
+                <div class="form-group">
+                    <label asp-for="Email"></label>
+                    <input asp-for="Email" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password"></label>
+                    <input asp-for="Password" class="form-control" />
+                </div>
+
+                <button class="btn btn-primary" type="submit">Log In</button>
+                <!--
     <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
+        <p>
+            <a asp-page="./Register" asp-route-returnUrl="Model.ReturnUrl">Register as a new user</a>
+        </p>
     </div>
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" />
+        -->
+            </form>
+        </section>
     </div>
-    <button class="btn btn-primary" type="submit">Log In</button>
-</form>
+</div>
