--- a/TechnicalSafetyApplication/Views/Application/Create.cshtml
+++ b/TechnicalSafetyApplication/Views/Application/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Message" class="control-label"></label>
@@ -22,7 +22,12 @@
                 <input asp-for="Theme" class="form-control" />
                 <span asp-validation-for="Theme" class="text-danger"></span>
             </div>
-          
+            <div class="form-group">
+                <label asp-for="ApplicationFile" class="control-label"></label>
+                <input asp-for="ApplicationFile" accept="image/*"/>
+                <span asp-validation-for="ApplicationFile" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
