--- a/TechnicalSafetyApplication/Views/Application/Delete.cshtml
+++ b/TechnicalSafetyApplication/Views/Application/Delete.cshtml
@@ -11,35 +11,30 @@
     <h4>Application</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Message)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Message)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Theme)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Theme)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CurrentStatus)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FileName)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CurrentStatus)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FileName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreationTime)
+
+        <dt class="col-sm-2">
+            Uploaded
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreationTime)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModificationTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModificationTime)
+        <dd class="col-sm-10">
+            <img src="@("~/image/"+Model.FileName)" asp-append-version="true" width="250px" height="250px" />
         </dd>
     </dl>
     
