--- a/TechnicalSafetyApplication/Views/Application/Details.cshtml
+++ b/TechnicalSafetyApplication/Views/Application/Details.cshtml
@@ -40,6 +40,24 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ModificationTime)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.FileName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.FileName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.User)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.User.Id)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ReplyId)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ReplyId)
+        </dd>
     </dl>
 </div>
 <div>
