Add paging navigation for application

--- a/TechnicalSafetyApplication/Views/Admin/Index.cshtml
+++ b/TechnicalSafetyApplication/Views/Admin/Index.cshtml
@@ -40,3 +40,4 @@
 </table>
 
 <a class="btn btn-primary" asp-action="Create">Create</a>
+<a asp-controller="RoleAdmin" asp-action="Index" class="btn btn-danger">Roles</a>
