--- a/TechnicalSafetyApplication/Views/RoleAdmin/Index.cshtml
+++ b/TechnicalSafetyApplication/Views/RoleAdmin/Index.cshtml
@@ -39,3 +39,4 @@
     }
 </table>
 <a class="btn btn-primary" asp-action="Create">Create</a>
+<a asp-controller="Admin" asp-action="Index" class="btn btn-danger">Back</a>
