--- a/TechnicalSafetyApplication/Views/_ViewImports.cshtml
+++ b/TechnicalSafetyApplication/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TechnicalSafetyApplication.Models
+@using TechnicalSafetyApplication
 @using TechnicalSafetyApplication.Models.Repository
 @using TechnicalSafetyApplication.Models.ViewModels
 @using TechnicalSafetyApplication.Models.AccountViewModels
