--- a/TechnicalSafetyApplication/Views/Attachment/Index.cshtml
+++ b/TechnicalSafetyApplication/Views/Attachment/Index.cshtml
@@ -34,6 +34,11 @@
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+
+                @if (User.IsInRole(Utility.MANAGERS_ROLE))
+                {
+                    <a asp-controller="Application" asp-action="Index" class="btn btn-danger">Reply</a>
+                }
             </td>
         </tr>
 }
