Added ReplyController and ViewModel for it

--- a/TechnicalSafetyApplication/Views/Application/Index.cshtml
+++ b/TechnicalSafetyApplication/Views/Application/Index.cshtml
@@ -86,7 +86,7 @@
 {
     <a asp-action="Index"
        asp-route-page="@(Model.PageViewModel.PageNumber - 1)"
-       class="btn btn-outline-dark">
+       class="btn btn-secondary">
         <i class="glyphicon glyphicon-chevron-left"></i>
         Previous
     </a>
@@ -95,7 +95,7 @@
 {
     <a asp-action="Index"
        asp-route-page="@(Model.PageViewModel.PageNumber + 1)"
-       class="btn btn-outline-dark">
+       class="btn btn-secondary">
         Next
         <i class="glyphicon glyphicon-chevron-right"></i>
     </a>
