--- a/TechnicalSafetyApplication/Views/Admin/Index.cshtml
+++ b/TechnicalSafetyApplication/Views/Admin/Index.cshtml
@@ -40,4 +40,4 @@
 </table>
 
 <a class="btn btn-primary" asp-action="Create">Create</a>
-<a asp-controller="RoleAdmin" asp-action="Index" class="btn btn-danger">Roles</a>
+<a asp-controller="RoleAdmin" asp-action="Index" class="btn btn-info">Roles</a>
